--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <h2>Gestor de una Biblioteca</h2>
 
-            <img src="IMG/gb.png" alt="Imagen del codigo del gestor">
+            <a href="https://github.com/carrodeguas06/Liceo-La-Paz-Programacion-Java-1DAM/tree/main/2º%20Trimestre/GestorBibliotecaBCD"><img src="IMG/gb.png" alt="Imagen del codigo del gestor"></a>
 
             <p>Gestor de una biblioteca en donde se pueden realizar las acciones necesarias para su gestión</p>
 
@@ -139,7 +139,7 @@
 
             <h2>Página web de viajes</h2>
 
-            <img src="IMG/pv.png" alt="Imagen pagina de viajes">
+            <a href="https://github.com/carrodeguas06/Liceo-La-Paz-CSS/tree/main/PCSSCarrodeguasBruno"><img src="IMG/pv.png" alt="Imagen pagina de viajes"></a>
 
             <p>Página web de ejemplo de como podría ser una página diseñada por mí</p>
 
@@ -147,11 +147,11 @@
 
         <article>
 
-            <h2>Calculadora</h2>
+            <h2>Gestor de Conciertos</h2>
 
-            <img src="IMG/calc.png" alt="Imagen del codigo de la calculadora">
+            <a href="https://github.com/carrodeguas06/Liceo-La-Paz-Programacion-Java-1DAM/tree/main/2º%20Trimestre/GestorConciertosBCD"><img src="IMG/calc.png" alt="Imagen del codigo"></a>
 
-            <p>Calculadora la cual permite operar todo tipo de números</p>
+            <p>Un gestor en el cual gestionar las entradas y los compradores de estas</p>
 
         </article>
         
