--- a/index.html
+++ b/index.html
@@ -114,19 +114,6 @@
             <img src="IMG/grid.png" alt="Imagen de un proyecto">
         </article>
         
-
-        <article id="rrss">
-            <!-- Flexbox -->
-
-            <h2>Redes Sociales</h2>
-            <div>
-            <a href="mailto:brunocarrodeguas@gmail.com"><img src="IMG/Gmail.png" alt="Gmail" id="mail"></a>
-
-            <a href="https://github.com/carrodeguas06"><img src="IMG/GitHub.png" alt="GitHub" id="git"></a>
-
-            <a href="https://www.linkedin.com/in/bruno-carrodeguas-díaz-3b036834b/"><img src="IMG/linkedin.png" alt="linkedin" id="lin"></a>
-            </div>
-        </article>
     </section>
         
     <!-- Flexbox -->
@@ -140,7 +127,11 @@
 
             <h2>Gestor de una Biblioteca</h2>
 
+            <br>
+
             <a href="https://github.com/carrodeguas06/Liceo-La-Paz-Programacion-Java-1DAM/tree/main/2º%20Trimestre/GestorBibliotecaBCD"><img src="IMG/gb.png" alt="Imagen del codigo del gestor"></a>
+
+            <br>
 
             <p>Gestor de una biblioteca en donde se pueden realizar las acciones necesarias para su gestión.</p>
 
@@ -150,7 +141,11 @@
 
             <h2>Página web de viajes</h2>
 
+            <br>
+
             <a href="https://github.com/carrodeguas06/Liceo-La-Paz-CSS/tree/main/PCSSCarrodeguasBruno"><img src="IMG/pv.png" alt="Imagen pagina de viajes"></a>
+
+            <br>
 
             <p>Página web de ejemplo de como podría ser una página diseñada por mí.</p>
 
@@ -160,7 +155,11 @@
 
             <h2>Gestor de Conciertos</h2>
 
+            <br>
+
             <a href="https://github.com/carrodeguas06/Liceo-La-Paz-Programacion-Java-1DAM/tree/main/2º%20Trimestre/GestorConciertosBCD"><img src="IMG/calc.png" alt="Imagen del codigo"></a>
+
+            <br>
 
             <p>Un gestor en el cual gestionar las entradas y los compradores de estas.</p>
 
@@ -255,6 +254,19 @@
             <p><input id="boton" type="submit" onclick="alert('Se ha enviado su mensaje')"></p> 
 
         </fieldset>    
+    </section>
+
+    <section id="rrss">
+        <!-- Flexbox -->
+
+        <h2>Redes Sociales</h2>
+        <div>
+        <a href="mailto:brunocarrodeguas@gmail.com"><img src="IMG/Gmail.png" alt="Gmail" id="mail"></a>
+
+        <a href="https://github.com/carrodeguas06"><img src="IMG/GitHub.png" alt="GitHub" id="git"></a>
+
+        <a href="https://www.linkedin.com/in/bruno-carrodeguas-díaz-3b036834b/"><img src="IMG/linkedin.png" alt="linkedin" id="lin"></a>
+        </div>
     </section>
 
     <!-- Flexbox -->
