--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="#idiomas">Idiomas</a>
             <a href="#experiencia">Experiencia</a>
             <a href="#contacto">Contacto</a>
+            <a href="#rrss">Redes Sociales</a>
         </nav>
     </header>
         
