--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <a href="#inicio">Inicio</a>
-            <a href="#sobremi">Sobre mi</a>
+            <a href="#sobremi">Sobre mí</a>
             <a href="#proyectos">Proyectos</a>
             <a href="#idiomas">Idiomas</a>
             <a href="#experiencia">Experiencia</a>
@@ -56,10 +56,10 @@
             <br>
 
             <ul>
-                <li id="html">HTML</li>
-                <li id="css">CSS</li>
-                <li id="java">Java</li>
-                <li id="sql">MySQL</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Java</li>
+                <li>MySQL</li>
             </ul>
 
         </article>
