--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
+                <li>XML</li>
                 <li>Java</li>
                 <li>MySQL</li>
             </ul>
