--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 
                 <br>
 
-                <a href="https://github.com/carrodeguas06/Liceo-La-Paz-Programacion-Java-1DAM/tree/main/2º%20Trimestre/GestorBibliotecaBCD"><img src="IMG/gb.png" alt="Imagen del codigo del gestor"></a>
+                <a href="https://github.com/carrodeguas06/Pokemon-Attack-Calculator"><img src="IMG/pkmn.png" alt="Imagen del codigo de la calculadora"></a>
 
                 <br>
 
-                <p>Gestor de una biblioteca en donde se pueden realizar las acciones necesarias para su gestión.</p>
+                <p>calculadora de daño para tus combates pokémon. Te dirá el daño maximo y minimo introduciendo una serie de datos</p>
 
             </article>
 
