--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <li>CSS</li>
                 <li>XML</li>
                 <li>Java</li>
+                <li>Python</li>
                 <li>MySQL</li>
             </ul>
 
