--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <li>CSS</li>
                 <li>XML</li>
                 <li>Java</li>
+                <li>Java FX</li>
+                <li>React Native</li>
                 <li>Python</li>
                 <li>MySQL</li>
             </ul>
