--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <li>React Native</li>
                 <li>Python</li>
                 <li>MySQL</li>
+                <li>Unity</li>
             </ul>
 
         </article>
@@ -152,7 +153,7 @@
 
             <article>
 
-                <h2>Gestor de Conciertos</h2>
+                <h2>Gestor de Judokas</h2>
 
                 <br>
 
